--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sing up</title>
+    <link rel="stylesheet" href="reset.css".css">
+    <link rel="stylesheet" href="main.css".css">
+<!-- TODO : dffh -->
+
+
 </head>
 <body>
+    <main class="container">
+        <div class="left-colom">
+            <h1 class="main-title">Sign up</h1>
+            <footer class="bottom-links">
+                <a class="link" href="#">Privacy policy</a>
+                <span class="symbol">&amp;</span>
+                <a class="link" href="#">Terms of service </a>
+            </footer>
+
+        </div>
+        <div class="right-colom">
+            <div class="close">x</div>
+            <form class="form">
+                <div class="form-row">
+                    <label for="username">Username</label>
+                    <input id="username" type="text" placeholder="Your usename">
+                </div>
+                <div class="form-row">
+                    <label for="email">Email</label>
+                    <input id="email" type="email" placeholder="Your email">
+                </div>
+                <div class="form-row">
+                    <label for="pass">Password</label>
+                    <input id="pass" type="password" placeholder="password">
+                </div>
+                <div class="form-row">
+                    <label for="re-pass">Repeat password</label>
+                    <input id="re-pass" type="password" placeholder="repeat password">
+                </div>
+                <div class="form-row">
+                    <!-- <button type="submit">Get started</button> -->
+                    <div class="btn">Get started</div>
+                    <span class="symbol">or</span>
+                    <a class="link" href="#">Sing in</a>
+                </div>
+            </form>
+        </div>
+    </main>
     
 </body>
 </html>
