--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sing up</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/reset.css">
+    <title>Sign in</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/reset.css">
 <!-- TODO : dffh -->
 
 
@@ -14,7 +14,7 @@
     <div class="background"></div>
     <main class="container">
         <div class="left-colom">
-            <h1 class="main-title">Sign up</h1>
+            <h1 class="main-title">Sign in</h1>
             <footer class="bottom-links">
                 <a class="link" href="#">Privacy policy</a>
                 <span class="symbol">&amp;</span>
@@ -25,14 +25,6 @@
             <div class="close">x</div>
             <form class="form">
                 <div class="form-row">
-                    <label for="username">Username</label>
-                    <input id="username" type="text" placeholder="Your usename" required>
-                </div>
-                <div class="form-row">
-                    <label for="email">Email</label>
-                    <input id="email" type="email" placeholder="Your email" required>
-                </div>
-                <div class="form-row">
                     <label for="pass">Password</label>
                     <input id="pass" type="password" placeholder="password" required>
                 </div>
@@ -41,9 +33,9 @@
                     <input id="re-pass" type="password" placeholder="repeat password" required>
                 </div>
                 <div class="form-row">
-                    <button  class="btn" type="submit">Get started</button>
+                    <button  class="btn" type="submit">Sign in</button>
                     <span class="text">or</span>
-                    <a class="linkSingin" href="./sign-in/">Sing in</a>
+                    <a class="linkSingin" href="../forgot password/">Forgot password?</a>
                 </div>
             </form>
         </div>
